--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+appdirs==1.4.4
 argon2-cffi==20.1.0
 asgiref==3.2.10
 astroid==2.3.3
@@ -19,12 +20,15 @@ dash-renderer==1.8.2
 dash-table==4.10.1
 decorator==4.4.2
 defusedxml==0.6.0
+distlib==0.3.1
 entrypoints==0.3
+filelock==3.0.12
 Flask==1.1.2
 Flask-Compress==1.7.0
 future==0.18.2
 idna==2.10
 ipykernel==5.3.4
+ipython==7.18.1
 ipython-genutils==0.2.0
 isort==4.3.21
 itsdangerous==1.1.0
@@ -77,6 +81,7 @@ tornado==6.0.4
 tqdm==4.51.0
 traitlets==5.0.5
 urllib3==1.25.11
+virtualenv==20.1.0
 wcwidth==0.2.5
 webencodings==0.5.1
 Werkzeug==1.0.1
