--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ isort==4.3.21
 itsdangerous==1.1.0
 jedi==0.17.2
 Jinja2==2.11.2
+joblib==0.17.0
 jsonschema==3.2.0
 jupyter-client==6.1.7
 jupyter-core==4.6.3
@@ -66,17 +67,22 @@ pyrsistent==0.17.3
 python-dateutil==2.8.1
 python-slugify==4.0.1
 pytz==2020.1
+pywin32==228
 pywinpty==0.5.7
 pyzmq==19.0.2
 requests==2.24.0
 retrying==1.3.3
+scikit-learn==0.23.2
+scipy==1.5.3
 Send2Trash==1.5.0
 six==1.14.0
+sklearn==0.0
 slugify==0.0.1
 sqlparse==0.4.1
 terminado==0.9.1
 testpath==0.4.4
 text-unidecode==1.3
+threadpoolctl==2.1.0
 tornado==6.0.4
 tqdm==4.51.0
 traitlets==5.0.5
